--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,11 @@
                         "assets": [
                             "src/favicon.ico",
                             "src/assets",
-                            "src/404.html"
+                            "src/404.html",
+                            {
+                                "glob": "**/*",
+                                "input": "public"
+                            }
                         ],
                         "styles": ["src/styles.scss"]
                     },
